--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,85 @@
+@import 'variables';
+
 body {
-    background: pink;
+    background: $gray;
+    font-family: avenir;
+    margin: 0;
+}
+h1 {
+    background: #fff;
+    font-size: 3rem;
+    margin: 0;
+    padding: 2rem;
+    text-align: center;
+}
+.search-form {
+    background: #fff;
+    box-shadow: 1px 2px 2px rgba(0,0,0,.15);
+    padding-bottom: 2rem;
+    text-align: center;
+    width: 100%;
+}
+.search-form input[type="text"] {
+    border: none;
+    border-bottom: 2px solid $gray;
+    box-sizing: border-box;
+    color: $accent;
+    font-size: 1rem;
+    margin-right: .5rem;
+    padding: .75rem;
+    transition: all .3s;
+    width: 40%;
+}
+.search-form input[type="text"]:hover,
+.search-form input[type="text"]:active,
+.search-form input[type="text"]:focus {
+    border-bottom: 2px solid $accent;
+    font-weight: 700;
+    outline: 0;
+}
+.search-form input[type="submit"] {
+    background: $accent;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    padding: .75rem;
+    transition: all .3s;
+}
+.search-form input[type="submit"]:hover,
+.search-form input[type="submit"]:active,
+.search-form input[type="submit"]:focus {
+    background: lighten($accent, 20%);
+    cursor: pointer;
+    outline: 0;
+}
+.search-results {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+}
+.search-results li {
+    box-shadow: 1px 2px 2px rgba(0,0,0,.15);
+    margin: 1rem;
+    width: 320px;
+}
+.search-results .artist-image {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 250px;
+    width: 100%;
+}
+.search-results h4 {
+    background: #fff;
+    box-sizing: border-box;
+    color: $accent;
+    margin: 0;
+    overflow: hidden;
+    padding: 1rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
 }
