--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,8 @@
 @import 'variables';
 
+* {
+    box-sizing: border-box;
+}
 body {
     background: $gray;
     font-family: avenir;
@@ -12,74 +15,93 @@ h1 {
     padding: 2rem;
     text-align: center;
 }
-.search-form {
-    background: #fff;
-    box-shadow: 1px 2px 2px rgba(0,0,0,.15);
-    padding-bottom: 2rem;
+nav {
+    background: $accent;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.25);
+    padding: 1rem;
+    position: absolute;
     text-align: center;
     width: 100%;
 }
-.search-form input[type="text"] {
-    border: none;
-    border-bottom: 2px solid $gray;
-    box-sizing: border-box;
-    color: $accent;
-    font-size: 1rem;
-    margin-right: .5rem;
-    padding: .75rem;
-    transition: all .3s;
-    width: 40%;
+nav.in-game {
+    background: $gray;
+    bottom: 0;
 }
-.search-form input[type="text"]:hover,
-.search-form input[type="text"]:active,
-.search-form input[type="text"]:focus {
-    border-bottom: 2px solid $accent;
-    font-weight: 700;
-    outline: 0;
-}
-.search-form input[type="submit"] {
-    background: $accent;
-    border: none;
+nav button {
+    background: transparent;
+    border: 0;
+    border-bottom: 3px solid $accent;
     color: #fff;
     font-size: 1rem;
-    padding: .75rem;
     transition: all .3s;
 }
-.search-form input[type="submit"]:hover,
-.search-form input[type="submit"]:active,
-.search-form input[type="submit"]:focus {
-    background: lighten($accent, 20%);
+nav button:hover,
+nav button:active,
+nav button:focus {
+    border-bottom: 3px solid #fff;
     cursor: pointer;
     outline: 0;
 }
-.search-results {
-    align-items: center;
+nav.in-game button {
+    border: 5px solid $accent;
+    color: $accent;
+    margin-bottom: 2rem;
+    padding: 1rem;
+}
+nav.in-game button:hover {
+    background: $accent;
+    color: #fff;
+}
+.question-wrapper {
+    height: calc(100vh - 58px);
+    margin: 0 auto;
+    width: 100%;
+}
+.question-wrapper p {
+    background: $accent;
+    box-shadow: 2px 3px 2px rgba(0,0,0,.25);
+    color: #fff;
+    margin: 0;
+    padding: 10rem 3rem;
+    text-align: center;
+}
+.answer-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    list-style-type: none;
-    padding: 0;
+    margin-top: 2rem;
 }
-.search-results li {
-    box-shadow: 1px 2px 2px rgba(0,0,0,.15);
-    margin: 1rem;
-    width: 320px;
-}
-.search-results .artist-image {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 250px;
-    width: 100%;
-}
-.search-results h4 {
+.answer-list fieldset {
     background: #fff;
-    box-sizing: border-box;
-    color: $accent;
-    margin: 0;
-    overflow: hidden;
-    padding: 1rem;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    border: 0;
+    border-radius: 15px;
+    margin: .5rem;
+    transition: all .3s;
+    width: 40%;
+}
+.answer-list fieldset:hover,
+.answer-list fieldset:focus,
+.answer-list fieldset:active {
+    background: $accent;
+    color: #fff;
+    cursor: pointer;
+}
+.answer-list .submit-wrapper {
     width: 100%;
+    margin-top: 2rem;
+    text-align: center;
+}
+.answer-list input[type="submit"] {
+    background: $accent;
+    border: 3px solid $accent;
+    color: #fff;
+    font-size: 1rem;
+    transition: all .3s;
+}
+.answer-list input[type="submit"]:hover,
+.answer-list input[type="submit"]:focus,
+.answer-list input[type="submit"]:active {
+    background: #fff;
+    color: $accent;
+    cursor: pointer;
 }
